--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 layout: default
 title: Main
 ---
-<section id='about' name='about' class='wrapper'>
+<section id='home' name='home' class='wrapper'>
+  <div class='container'>
+    <h2>Home</h2>
+  </div>
+</section>
+
+<section id='whoweare' name='whoweare' class='wrapper'>
   <div class='container'>
     <h2>About</h2>
     <p>JIN is a leading cross-cultural entertainment agency focusing on celebrity promotion to lead market entry, brand marketing campaigns, entertainmnent sponsorship for elite brands.  We offer
@@ -16,7 +22,7 @@ higher level of access to celebrities in the world to provide strategic, customi
 
 <section id='whatwedo' name='whatwedo' class='wrapper'>
   <div class='container'>
-    <h2>What we do </h2>
+    <h2>What we do</h2>
     <section>
       <div>
         <h3>Market Entry Strategy</h3>
@@ -34,9 +40,9 @@ higher level of access to celebrities in the world to provide strategic, customi
   </div>
 </section>
 
-<section id='project' name='project' class='wrapper'>
+<section id='insights' name='insights' class='wrapper'>
   <div class='container'>
-    <h2>Project</h2>
+    <h2>Insights</h2>
 
     {% for post in site.categories.blog %}
     <section>
