--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ higher level of access to celebrities in the world to provide strategic, customi
     {% for post in site.categories.blog %}
     <section>
       <p><img src='{{post.image}}' alt='{{post.title}} image' title='{{post.title}}'></p>
-      <h3><a>{{post.title}} | {{post.type}}</a></h3>
+      <h3><a>{{post.title}} </a></h3>
       <div id='description'><p>{{post.content}}</p></div>
     </section>
     {% endfor %}
