--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 layout: default
 title: Main
 ---
-<section id='about' name='about' class='wrapper'>
+<section id='home' name='home' class='wrapper'>
   <div class='container'>
-    <h2>About</h2>
+  </div>
+</section>
+
+<section id='whoweare' name='whoweare' class='wrapper'>
+  <div class='container'>
+    <h2>Who we are</h2>
     <p>JIN is a leading cross-cultural entertainment agency focusing on celebrity promotion to lead market entry, brand marketing campaigns, entertainmnent sponsorship for elite brands.  We offer
 higher level of access to celebrities in the world to provide strategic, customized entertainment solutions throughout advertising, events, licensing,  goodwill and corporate branding.</p> 
  
