about and whoweare

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@ title: Main
 <section id='whoweare' name='whoweare' class='wrapper'>
   <div class='container'>
     <h2>Who we are</h2>
-    <p>JIN is a leading cross-cultural entertainment agency focusing on celebrity promotion to lead market entry, brand marketing campaigns, entertainmnent sponsorship for elite brands.  We offer
-higher level of access to celebrities in the world to provide strategic, customized entertainment solutions throughout advertising, events, licensing,  goodwill and corporate branding.</p> 
- 
-<p>Emotions are the most precious currencies of brands.  We believe that if brands can find a way to stimulate people’s emotions connecting with certain celebrities, story telling they can clarify their brand identity and maximize the brand value. </p> 
+	<p>JIN is a leading cross-cultural entertainment agency for targeted celebrity marketing covering celebrity endorsement, branded marketing, entertainment sponsorship for elite brands. We offer higher level of access to celebrities in the world to provide strategic, customized entertainment solutions throughout advertising, events, licensing, goodwill and corporate branding.</p>
 
-<p>With 3 offices (in Beijing, Shanghai, and Hong Kong) and a smart dedicated bilingual staff, JIN provides world-class support to all types and sizes of international entertainment solutions.</p> 
+	<p>Emotions are the most precious currencies of brands. We believe that if brands can stimulate peopleâ€™s emotions connecting with certain celebrities through story telling, they can clarify their brand identity and maximize the brand value.</p>
+
+	<p>With 3 offices (in Shanghai, Los Angeles, and London) and a smart dedicated bilingual staff, JIN provides world-class support to all types and sizes of international entertainment solutions.</p>
+
+
   </div>
 </section>
 
@@ -24,17 +25,23 @@ higher level of access to celebrities in the world to provide strategic, customi
     <h2>What we do </h2>
     <section>
       <div>
-        <h3>Market Entry Strategy</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
-      </div>
+		<h3>Celebrity Endorsement</h3>
+		<p>Celebrity acquisition<p>
+		<p>Advertising Campaigns<p>
+		<p>Global Celebrity Partnerships<p>
+	  </div>
       <div>
-        <h3>Brand Marketing</h3>        
-        <p><span>Digital marketing</span><span>Product integration</span></p>
-      </div>
+		<h3>Brand Marketing</h3>
+		<p>Celebrity brand assessment<p>
+		<p>Market strategy consultancy<p>
+		<p>Brand marketing: Online digital/Offline Integration<p>
+	  </div>
       <div>
-        <h3>Entertainment Sponsorship</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</p>
-      </div>
+		<h3>Entertainment Sponsorship</h3>
+		<p>Musical Acts<p>
+		<p>Musical Acts<p>
+		<p>Speakers<p>
+	  </div>
     </section>
   </div>
 </section>
