--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ title: Main
     {% for post in site.categories.blog %}
     <section>
       <p><img src='{{post.image}}' alt='{{post.title}} image' title='{{post.title}}'></p>
-      <h3><a>{{post.title}}</h3>
+      <h3>{{post.title}}</h3>
       <div id='description'><p>{{post.content}}</p></div>
     </section>
     {% endfor %}
