--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@ title: Main
 ---
 <section id='home' name='home' class='wrapper'>
   <div class='container'>
+	<div id='slider' class='swipe'>
+	  <div class='swipe-wrap'>
+	    <div><img src='images/hnm.jpg'/></div>
+	    <div><img src='images/hnm2.jpg'/></div>
+	    <div><img src='images/brochure.jpg'/></div>
+	  </div>
+	</div>
+	<nav>
+      <ul id='position'>
+        <li class='on'></li>
+        <li></li>
+        <li></li>
+      </ul>
+  </nav>
   </div>
 </section>
 
