--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 layout: default
 title: Main
 ---
+<section id='projects'>
+  <article class='project'>
+    <h3>Gucci</h3>
+  </article>
+  <article class='project'>
+    <h3>统一冰红茶</h3>
+  </article>
+  <article class='project'>
+    <h3>H&M</h3>
+  </article>
+</section>
 <section id='home' name='home' class='wrapper'>
   <div class='container'>
 	<div id='slider' class='swipe'>
