slide show image

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@ title: Main
   <div class='container'>
 	<div id='slider' class='swipe'>
 	  <div class='swipe-wrap'>
-	    <div><img src='images/hnm.jpg'/></div>
-	    <div><img src='images/hnm2.jpg'/></div>
-	    <div><img src='images/brochure.jpg'/></div>
+	    <div><img src='images/slideshow/gucci-libingbing.jpg'/></div>
+	    <div><img src='images/slideshow/binghongcha.jpg'/></div>
+	    <div><img src='images/slideshow/David-Beckham-H-M.jpg'/></div>
 	  </div>
 	</div>
 	<nav>
