--- a/index.html
+++ b/index.html
@@ -77,7 +77,10 @@ title: Main
 
     {% for post in site.categories.blog %}
     <section>
-      <p><img src='{{post.image}}' alt='{{post.title}} image' title='{{post.title}}'></p>
+      <p>
+	    <img src='{{post.image}}' alt='{{post.title}} image' title='{{post.title}}'>
+	    <span>{{ post.date | date: '%b %d, %Y' }}</span>
+	  </p>
       <div id='description'>
 	  <h3>{{post.title}}</h3>
 	    {{post.content}}
