--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ title: Main
     <section>
       <p>
 	    <img src='{{post.image}}' alt='{{post.title}} image' title='{{post.title}}'>
-	    <span>{{ post.date | date: '%b %d, %Y' }}</span>
+	    <span>{{ page.date | date: '%b %d, %Y' }}</span>
 	  </p>
       <div id='description'>
 	  <h3>{{post.title}}</h3>
